--- a/app.config
+++ b/app.config
@@ -67,6 +67,12 @@
    <setting name="KeyboardFocusIncomingCall" serializeAs="String">
     <value>False</value>
    </setting>
+   <setting name="AlwaysOnTopDuringCall" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="GlobalHotKey" serializeAs="String">
+    <value />
+   </setting>
   </FSClient.Properties.Settings>
 	</userSettings>
 	<runtime>
