Moved to a more generic global hotkey support and added hot keys for end/answer/mute

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -83,5 +83,14 @@
     <Setting Name="GlobalHotKey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="GlobalAnsHotKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="GlobalEndHotKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="GlobalMuteHotKey" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
