--- a/app.config
+++ b/app.config
@@ -73,6 +73,15 @@
    <setting name="GlobalHotKey" serializeAs="String">
     <value />
    </setting>
+   <setting name="GlobalAnsHotKey" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="GlobalEndHotKey" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="GlobalMuteHotKey" serializeAs="String">
+    <value />
+   </setting>
   </FSClient.Properties.Settings>
 	</userSettings>
 	<runtime>
