--- a/JabraHeadset/JabraHeadsetPlugin.csproj
+++ b/JabraHeadset/JabraHeadsetPlugin.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JabraHeadsetPlugin</RootNamespace>
     <AssemblyName>JabraHeadsetPlugin</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <SccProjectName>
@@ -43,12 +43,12 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JabraDeviceAPI">
-      <HintPath>..\External Items\JabraDeviceAPI.dll</HintPath>
+    <Reference Include="FSClient">
+      <HintPath>..\bin\Debug\FSClient.exe</HintPath>
+      <Private>False</Private>
     </Reference>
-    <Reference Include="JabraTelephonyAPI, Version=1.2.0.0, Culture=neutral, PublicKeyToken=8f966dc7fd80e1d9, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\External Items\JabraTelephonyAPI.dll</HintPath>
+    <Reference Include="JabraSDK">
+      <HintPath>..\External Items\JabraSDK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -62,14 +62,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\FSClient.csproj">
-      <Project>{A2D2A785-3B79-4042-9C3D-97B1CD9A804E}</Project>
-      <Name>FSClient</Name>
-      <Private>False</Private>
-    </ProjectReference>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <AdditionalFiles Include="..\External Items\libjabra.dll">
+      <Link>libjabra.dll</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AdditionalFiles>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
